generate rails_admin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,10 @@
 
 <body>
   
-<%= render 'navbar' %>
+<%= render 'tips/navbar' %>
 
 <%= yield %>
-<%= render 'footer' %>
+<%= render 'tips/footer' %>
 
 </body>
 </html>
