layout and devise

--- a/app/views/tips/_navbar.html.erb
+++ b/app/views/tips/_navbar.html.erb
@@ -15,7 +15,7 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="about.html">About</a>
+          <a href="/about">About</a>
         </li>
         <li>
           <a href="/tips/new">Submit</a>
