--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,3 +29,8 @@
 
 </body>
 </html>
+<script type="text/javascript">$("form").on("keypress", function (e) {
+    if (e.keyCode == 13) {
+        return false;
+    }
+});</script>
