link display_name to posts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,10 @@
  *= require fontstyle
  *= require font-awesome
  */
+.thumb-box{
+  height: 500px;
+}
+
+.like:hover {
+  text-decoration: none;
+}
