--- a/app/views/tips/pending.html.erb
+++ b/app/views/tips/pending.html.erb
@@ -30,7 +30,7 @@
           </h3>
         </div>
         <% end %>
-          <p class="post-meta">Posted by <%= tip.author %> on <%= tip.created_at.strftime("%B %e, %Y") %></p>
+          <p class="post-meta">Posted by <%= tip.user.display_name %> on <%= tip.created_at.strftime("%B %e, %Y") %></p>
 
           <!-- <p class="post-meta">Posted by <a href="#">Trevor Healy</a> on November 29, 2015</p> -->
         </div>
