add votes to tips, create routes

--- a/app/views/tips/new.html.erb
+++ b/app/views/tips/new.html.erb
@@ -39,7 +39,7 @@
                     <p><b>Do: </b><%= f.text_field :do, :class => "form-control" %></p>
                     <p><b>Do Not: </b><%= f.text_field :dont, :class => "form-control" %></p>
                     <p>
-                    <blockquote><%= f.text_field :quote, :class => "form-control", :placeholder => "quote goes here" %></blockquote>
+                    <blockquote><%= f.text_field :quote, :class => "form-control", :placeholder => "optional quote goes here" %></blockquote>
                     <center><div class="actions">
     <%= f.submit %>
   </div></center>
