--- a/app/views/tips/_titlebar.html.erb
+++ b/app/views/tips/_titlebar.html.erb
@@ -1,4 +1,4 @@
-<header class="intro-header" style="background-image: url('/app/assets/home-bg.jpg')">
+<header class="intro-header" style="background-image: url('http://i.imgur.com/5GBASmJ.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
