--- a/app/views/tips/_footer.html.erb
+++ b/app/views/tips/_footer.html.erb
@@ -20,7 +20,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/trevorwhealy" target="_blank">
+            <a href="https://github.com/MichaelJulian/dbtguy" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
