--- a/app/views/tips/about.html.erb
+++ b/app/views/tips/about.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Don't Be That Guy (DBTG) was created by Santa Clara University students Trevor Healy and Michael Julian over the course of their senior Feminism and Women's Studies class. They realized that there are fewer guides tailored towards teaching men not to assault women, then there are aimed at women avoiding assault. We think that DBTG can be a valuable resource for men of all types.. We can put the powerpoint stuff here about the types of people. </p>
+                <p>Don't Be That Guy (DBTG) was created by Santa Clara University students Trevor Healy and Michael Julian over the course of their senior Feminism and Women's Studies class. They realized that there are fewer guides tailored towards teaching men not to assault women, than there are aimed at women avoiding assault. We think that DBTG can be a valuable resource for men of all types.. We can put the powerpoint stuff here about the types of people. </p>
             </div>
         </div>
     </div>
