--- a/app/views/tips/new.html.erb
+++ b/app/views/tips/new.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-<header class="intro-header" style="background-image: url('http://i.imgur.com/5GBASmJ.jpg')">
+<header class="intro-header" style="background-image: url('https://i.imgur.com/5GBASmJ.jpg')">
   <div class="container">
       <div class="row">
           <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
