remove forgot-password link, change about page

--- a/app/views/tips/about.html.erb
+++ b/app/views/tips/about.html.erb
@@ -2,7 +2,37 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Don't Be That Guy (DBTG) was created by Santa Clara University students Trevor Healy and Michael Julian over the course of their senior Feminism and Women's Studies class. They realized that there are fewer guides tailored towards teaching men not to assault women, than there are aimed at women avoiding assault. We think that DBTG can be a valuable resource for men of all types.. We can put the powerpoint stuff here about the types of people. </p>
+                <h1>Story</h1>
+                <p>Don't Be That Guy (DBTG) was created by Santa Clara University students Trevor Healy and Michael Julian over the course of their senior Feminism and Women's Studies class. They realized that there are fewer guides tailored towards teaching men not to assault women, than there are aimed at women avoiding assault. We think that DBTG can be a valuable resource for men of all types.</p>
+
+
+                <h1> Types of Men </h1>
+                <p>We believe that men fall into one of three categories.</p>
+
+                <h3>Cognizant / Caring:</h3> 
+                <p>These men understand what others are feeling, and engage accordingly</p>
+
+
+                <h3>Inadvertent / Ignorant:</h3>
+                <p>These men are inexperienced, misinformed, or lack a certain perspective, but don't mean outright harm.</p>
+
+
+                <h3>Deliberate / Devious:</h3>
+                <p>These men may or may not know what others are feeling; worse even, they don't care. They solely serve themselves.</p>
+
+                <h1>Changing Men's Behavior Starts with Other Men</h1>
+
+                <h3>Strategy 1 - Educate the Inadvertent:</h3>
+                <p>Learn to recognize good and bad behavior given common situations.
+                  Nobody is born knowing everything, nor is it easy to "walk a mile in someone else's shoes." We hope this site helps bridge that gap.
+                </p>
+
+                <h3>Strategy 2 - Ostracize the Devious:</h3>
+                <p>We encourage the I/I and C/C men to call out bad behaviors when they see them.
+                It should never be socially acceptable to disrespect people of <i>any gender.</i> However, we may use disrespectful language on this website as a means of calling out the D/D men. </p>
+
+                <center><p> <i> Thanks for reading. <%= link_to "Want to contribute?", new_tip_path %></i> </p></center>
+
             </div>
         </div>
     </div>
