--- a/app/views/tips/index.html.erb
+++ b/app/views/tips/index.html.erb
@@ -33,8 +33,14 @@
           </h3>
         </div>
         <% end %>
-          <p class="post-meta">Posted by <%= tip.user.display_name %> on <%= tip.created_at.strftime("%B %e, %Y") %></p>
-
+          <span class="fa-stack fa-lg" style="font-size:0.9em">
+            <%= link_to like_tip_path(tip),  class: "like", method: :get do %>
+            <i class="fa fa-thumbs-o-up fa-stack-2x"></i>
+            <i class="fa fa-stack-1x" style="position: relative; top:0.5px; left:2px; font-size: 0.7em">
+              <%= tip.get_upvotes.size %></i>
+            <% end %>
+          </span>
+          Posted by <%= tip.user.display_name %> on <%= tip.created_at.strftime("%B %e, %Y") %>
           <!-- <p class="post-meta">Posted by <a href="#">Trevor Healy</a> on November 29, 2015</p> -->
         </div>
         <hr>
