--- a/app/views/tips/pending.html.erb
+++ b/app/views/tips/pending.html.erb
@@ -34,10 +34,11 @@
         <% end %>
           <span class="fa-stack fa-lg" style="font-size:0.9em">
             <%= link_to like_tip_path(tip),  class: "like", method: :get do %>
-    <i class="fa fa-thumbs-o-up fa-stack-2x"></i>
-    <i class="fa fa-stack-1x" style="position: relative; top:0.5px; left:2px; font-size: 0.7em"><%= tip.get_upvotes.size %></i>
-    <% end %>
-</span>
+            <i class="fa fa-thumbs-o-up fa-stack-2x"></i>
+            <i class="fa fa-stack-1x" style="position: relative; top:0.5px; left:2px; font-size: 0.7em">
+              <%= tip.get_upvotes.size %></i>
+            <% end %>
+          </span>
 Posted by <%= tip.user.display_name %> on <%= tip.created_at.strftime("%B %e, %Y") %>
 
 
@@ -73,6 +74,11 @@ Posted by <%= tip.user.display_name %> on <%= tip.created_at.strftime("%B %e, %Y
 
       });
   });
+  $('.upvote')
+  .on('ajax:send', function () { $(this).addClass('loading'); })
+  .on('ajax:complete', function () { $(this).removeClass('loading'); })
+  .on('ajax:error', function () { $(this).after('<div class="error">There was an issue.</div>'); })
+  .on('ajax:success', function (data) { $(this).html(data.count); });
   </script>
 
 </body>
